More globbing and latest
Signed-off-by: Mark Matyas <mark.matyas@linaro.org>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,5 +49,6 @@ jobs:
         run: | 
           jfrog --version
           jfrog rt ping
-          jfrog rt u ${{ steps.extract1.outputs.destination }}/*.txt$ codelinaro-toolchain-for-hexagon
+          jfrog rt u "${{ steps.extract1.outputs.destination }}/*.txt" codelinaro-toolchain-for-hexagon
+          jfrog rt u "${{ steps.extract1.outputs.destination }}/*.txt" codelinaro-toolchain-for-hexagon/latest.txt
         
