--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          file: ./Dockerfile.build
+          file: ./Dockerfile
           tags: hexagon:latest
           load: true
 
@@ -34,7 +34,7 @@ jobs:
         uses: shrink/actions-docker-extract@v1
         with:
           image: hexagon:latest
-          path: /app/results/
+          path: /usr/local/hexagon-artifacts
 
       - name: Setup jFrog CLI
         uses: jfrog/setup-jfrog-cli@v1
@@ -45,5 +45,5 @@ jobs:
         run: | 
           jfrog --version
           jfrog rt ping
-          jfrog rt u "${{ steps.extract1.outputs.destination }}/*.txt" codelinaro-toolchain-for-hexagon
+          jfrog rt u "${{ steps.extract1.outputs.destination }}/*.tar.xz" codelinaro-toolchain-for-hexagon
         
