--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           tags: hexagon:latest
           load: true
 
-      - name: Extract file 1
+      - name: Extract artifacts
         id: extract1
         uses: shrink/actions-docker-extract@v1
         with:
@@ -41,7 +41,7 @@ jobs:
         env:
           JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
 
-      - name: Publish file
+      - name: Publish artifacts
         run: | 
           jfrog --version
           jfrog rt ping
