--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,4 +46,5 @@ jobs:
           jfrog --version
           jfrog rt ping
           jfrog rt u "${{ steps.extract1.outputs.destination }}/*.tar.xz" codelinaro-toolchain-for-hexagon
+          jfrog rt u "${{ steps.extract1.outputs.destination }}/*.sha256" codelinaro-toolchain-for-hexagon
         
