--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
           file: ./Dockerfile
           tags: hexagon:latest
           load: true
+          build-args: |
+            ARTIFACT_TAG={{ github.event.client_payload.tag_name }}
 
       - name: Extract artifacts
         id: extract1
