--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           tags: hexagon:latest
           load: true
           build-args: |
-            ARTIFACT_TAG={{ github.event.client_payload.tag_name }}
+            ARTIFACT_TAG=${{ github.event.client_payload.tag_name }}
 
       - name: Extract artifacts
         id: extract1
