Ensure checksums are uploaded last
Signed-off-by: Mark Matyas <mark.matyas@linaro.org>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,5 +48,6 @@ jobs:
           jfrog --version
           jfrog rt ping
           cd ${{ steps.extract1.outputs.destination }}/hexagon-artifacts
-          jfrog rt u --detailed-summary --flat=false --recursive ./ codelinaro-toolchain-for-hexagon
+          jfrog rt u --detailed-summary --flat=false --recursive --exclusions="*.sha256" ./ codelinaro-toolchain-for-hexagon
+          jfrog rt u --detailed-summary --flat=false --recursive "*.sha256" ./ codelinaro-toolchain-for-hexagon
         
